Fixed card vertical align

--- a/css/homework.css
+++ b/css/homework.css
@@ -14,6 +14,7 @@
   height:250px;
   position: relative;
   text-align: left;
+  vertical-align: top;
 }
 
 .homework .img{
