--- a/css/lecture.css
+++ b/css/lecture.css
@@ -13,6 +13,7 @@
   margin: 10px;
   padding-bottom: 50px;
   text-align: left;
+  vertical-align: top;
 }
 
 .lecture:after{
